fix(style): select item text color is not visible on dark mode (#132)
* style(select): fix style item color text on dark mode

* chore: lock file

--- a/static/global.css
+++ b/static/global.css
@@ -5,12 +5,18 @@ body.dark-mode {
   background-color: #111f31;
   color: #ffffff;
 }
-body.dark-mode h1, body.dark-mode h4, body.dark-mode strong {
+body.dark-mode h1,
+body.dark-mode h4,
+body.dark-mode strong {
   color: #ffffff;
 }
 body.dark-mode code {
   background-color: #172f4e;
   color: #ffffff;
+}
+body.dark-mode .filter {
+  --itemColor: #151515;
+  --itemHoverColor: #151515;
 }
 body.dark-mode .terminal-card {
   border: 1px solid #1a2c44;
